--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "framer-motion": "^12.4.1",
+    "html2canvas": "^1.4.1",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
